# easytor

./: Cargo.toml
crates/easytor/: Cargo.toml  README.md
crates/rust-mkp224o/: Cargo.toml  README.md
crates/rust-mkp224o/src/: cli.rs  constants.rs  error.rs  lib.rs  logger.rs  main.rs
crates/rust-mkp224o/src/commands/: execute.rs  install.rs  mod.rs  uninstall.rs
crates/rust-mkp224o/src/repository/: build_command.rs  cleanup_command.rs  git.rs  mkp224o_command.rs  mod.rs
crates/rust-mkp224o/src/shell/: build_command.rs  cleanup_command.rs  command.rs  executor.rs  mkp224o_command.rs  mod.rs  packages_command.rs
