[package]
name = "rust-mkp224o"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive", "color"] }
concolor-clap = "0.1.0"
dirs = "6.0.0"
env_logger = "0.11.8"
git2 = "0.20.1"
log = "0.4.27"
once_cell = "1.18.0"
serde = { version = "1.0.196", features = ["derive"] }
shell-escape = "0.1.5"
thiserror = "1.0.56"
toml = "0.8.10"
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
console = "0.15.8"
